--- a/js/app/templates/home/suggestion.html
+++ b/js/app/templates/home/suggestion.html
@@ -1,6 +1,16 @@
-<span class="icon">
-    <img src="images/feedback-icon.png"/>
-</span>
-<span class="feedback-link">
-    <a target="_blank" href="/campus/Lists/issues/AllItems.aspx">Feedback to the site</a>
-</span>
+<div class="item">
+    <span class="icon">
+        <img src="/_layouts/15/images/icdoc.png" class="icon-doc"/>
+    </span>
+    <span class="feedback-link">
+        <a target="_blank" href="/campus/Documents/DalianWebSiteUserManual.doc">User Manual</a>
+    </span>
+</div>
+<div class="item">
+    <span class="icon">
+        <img src="images/feedback-icon.png"/>
+    </span>
+    <span class="feedback-link">
+        <a target="_blank" href="/campus/Lists/issues/">Feedback and Suggestion</a>
+    </span>
+</div>
