--- a/js/app/templates/layouts/footer.html
+++ b/js/app/templates/layouts/footer.html
@@ -1,1 +1,11 @@
-<p class="text-muted">All right Reserved.    Rockwell Automation Dalian Campus 2014 &copy;<br/> Best viewed under chrome, firefox, IE10+</p>
+<div class="item">
+    <span class="text-muted">&copy; 2014 Rockwell Automation Dalian Campus. All rights reserved.<br/> Best viewed under chrome, firefox, IE10+</span>
+</div>
+<div class="item site-stats">
+    <i class="fa fa-bar-chart-o"></i>
+    <span class="site-stats-items">
+        <span class="s-item s-week" data-toggle="tooltip" data-placement="top"  title="visits of latest week">{{sitestats.week}}</span><span class="s-split"> / </span>
+        <span class="s-item s-month" data-toggle="tooltip" data-placement="top"  title="visits of latest month">{{sitestats.month}}</span><span class="s-split"> / </span>
+        <span class="s-item s-whole" data-toggle="tooltip" data-placement="top"  title="total visits">{{sitestats.whole}}</span>
+    </span>
+</div>
