--- a/js/app/templates/partials/suggestion_modal.html
+++ b/js/app/templates/partials/suggestion_modal.html
@@ -5,7 +5,7 @@
               <input type="radio" class="input" name="To" value="campus_manager" checked> Campus Manager
             </label>
             <label class="radio-inline">
-              <input type="radio" class="input" name="To" value="hr"> HR Specialist
+              <input type="radio" class="input" name="To" value="hr"> HR Manager
             </label>    
        </div>
        <div class="subject item">
