--- a/css/app/module.css
+++ b/css/app/module.css
@@ -50,7 +50,6 @@
 }
 
 #header .top-right-banner .suggestion {
-    margin-left: 10px;
 }
 
 #header .top-right-banner .suggestion img {
@@ -71,11 +70,73 @@
 
 #header .top-right-banner > .item{
     display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+#header .top-right-banner > .signed-user > a{
+    font-size: .95em;
 }
 
 /*footer*/
+
+
 #footer .text-muted{
     color:#fff;
+}
+
+#footer .container {
+    font-size:.91em;
+    text-align: center;
+}
+
+#footer .container > .item{
+    display: inline-block;
+    margin-top:10px;
+    font-family: arial;
+}
+
+#footer   .site-stats {
+    margin-left: 30px;
+    color:#eee;
+    padding-top: 5px;
+    vertical-align: top;
+}
+
+#footer   .site-stats .tooltip-inner {
+    padding: 6px 12px;
+     -webkit-box-shadow: 0px 2px 8px #060606;
+    -moz-box-shadow:0px 2px 8px #060606;
+    -ms-box-shadow:0px 2px 8px #060606;
+    box-shadow: 0px 2px 8px #060606;
+}
+
+#footer   .site-stats .site-stats-items .s-item {
+    padding-left: 3px;
+    padding-right: 3px;
+    cursor: pointer;
+}
+
+#footer  .site-stats .site-stats-items .s-week{
+    color:#87C31E;
+}
+
+#footer   .site-stats .site-stats-items .s-month{
+    color:#3498db;
+}
+
+#footer  .site-stats .site-stats-items .s-whole{
+    color:#e67e22;
+}
+
+#footer   .site-stats .site-stats-items .s-item:hover{
+    text-shadow: 0px 3px 16px #FFF
+}
+
+#footer  .site-stats .fa {
+    position: relative;
+    bottom: -3px;
+    font-size: 1.6em;
 }
 
 /* pace */
@@ -389,9 +450,8 @@ sidebar nav list
 .panel {
     border-radius: 4px;
     border: 1px solid #E6E6E6;
-    
-    -webkit-box-shadow: 1px 1px 7px #C5C5C5;
-    box-shadow: 1px 1px 7px #C5C5C5;
+    -webkit-box-shadow: 0px 0px 8px #E0DFDF;
+    box-shadow: 0px 0px 8px #E0DFDF;
     border-radius: 0px;
     font-size: 1em;
     background: #fff;
@@ -659,7 +719,6 @@ sidebar nav list
  }
 
 .panel-notify .panel-notify-sub {
-    border: 1px solid #ddd;
     background: #ffffff;
     background: -moz-linear-gradient(top,  #ffffff 0%, #f7f7f7 32%, #eaeaea 37%, #f6f6f6 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(32%,#f7f7f7), color-stop(37%,#eaeaea), color-stop(100%,#f6f6f6));
@@ -720,8 +779,12 @@ sidebar nav list
 }
 
 .panel-notify-birthday .carousel-inner{
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     top: 10px;
+}
+
+.panel-notify-birthday .carousel-inner .item > div{
+    top: 5px;
 }
 
 .panel-notify-birthday .carousel-inner .col-md-4  .label{
@@ -770,8 +833,8 @@ sidebar nav list
 
 a.profilelink.highlight img,
 a.profilelink:hover img{
-    border-color: #6EE2FF;
-    box-shadow: 0px 0px 14px #6EE2FF !important;
+    border-color: #BBB;
+    box-shadow: 0px 0px 10px #B6B6B6   !important;
 }
 
 /*http://stackoverflow.com/a/13625843 */
@@ -780,6 +843,17 @@ a.profilelink:hover img{
     width: 100%;
     height: 0;
     padding-bottom: 100%;
+}
+
+.panel-notify-birthday .label-birthday{
+    position: relative;
+    top: 10px;
+    font-weight: normal;
+    background: #428BCA;
+    font-size: 85%;
+    font-family: arial;
+    box-shadow: 0px 1px 6px #134E81;
+    padding:.3em 1em;
 }
 
 .panel-notify-birthday   a.profilelink img{
@@ -814,6 +888,7 @@ a.profilelink:hover img{
     padding:0px;
     margin-bottom: 10px;
     font-size: 1.2em;
+    margin-top: 15px;
 }
 
 .panel-notify-sub-hire-information   a.profilelink img {
@@ -838,7 +913,7 @@ a.profilelink:hover img{
     text-align: left;
 }
 .panel-notify-sub-hire-information  .intro .statement {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-size: 1em;
     height:54px;
     overflow-y:hidden;
@@ -855,6 +930,8 @@ a.profilelink:hover img{
 .panel-notify-sub-hire-information  .intro .label{
     font-size: inherit;
     font-weight: normal;
+    padding:.3em 1em;
+    box-shadow: 0px 1px 6px #134E81;
 }
 
 .panel-notify-sub-hire-information  .intro .team {
@@ -925,7 +1002,7 @@ a.profilelink:hover img{
 /*right side */
 .column-right-side   .panel-container {
       position: relative;
-      margin-bottom: 25px;
+      margin-bottom: 15px;
 }
 
 .column-right-side  .panel-head h1 {
@@ -955,7 +1032,8 @@ a.profilelink:hover img{
 }
 
 .profilelink img{
-    box-shadow: 0px 0px 5px #aaa;
+    box-shadow: 0px 0px 5px #E4E4E4;
+    padding: 2px;
 }
 
 .panel-profile .profile-updates{
@@ -991,6 +1069,7 @@ a.profilelink:hover img{
 .panel-profile .profile-avatar  img{
     width: 100px;
     height: 100px;
+
 }
 
 .panel-profile .profile-avatar div {
@@ -1043,16 +1122,23 @@ a.profilelink:hover img{
 }
 
 .panel-links .list-group-item:active{
-    background: #555;
+    background: #D7D7D7;
 }
-
-
 
 /*suggestion box */
 .panel-sugesstion {
     box-shadow: none;
     border: none;
 }
+
+.panel-sugesstion  .item{
+    margin-bottom: 5px;
+}
+
+.panel-sugesstion .icon-doc{
+    margin: 0 7px;
+}
+
 .panel-sugesstion  img {
 }
 
@@ -1366,6 +1452,7 @@ a.profilelink:hover img{
 .contact_modal_body .image img{
     width: 120px;
     height: 120px;
+    padding: 3px;
 }
 
 
