--- a/css/app/state.css
+++ b/css/app/state.css
@@ -355,4 +355,13 @@ http://www.mademyday.de/css-height-equals-width-with-pure-css.html
     width:100%;
     height: 100%;
     left: 0;
+    padding: 2px;
+}
+
+.contact-img-box  img:hover{
+     -webkit-box-shadow:0px 1px 10px #BBB;
+    -moz-box-shadow:0px 1px 10px #BBB;
+    -ms-box-shadow:0px 1px 10px #BBB;
+    box-shadow:0px 1px 10px #BBB;
+    cursor: pointer;
 }
