--- a/js/app/templates/home/notify_birthday.html
+++ b/js/app/templates/home/notify_birthday.html
@@ -3,10 +3,10 @@
     
     {{#if contacts.morepage}}
     <!-- Carousel nav -->
-    <div class="controls pull-right hidden-xs">
+    <!-- <div class="controls pull-right hidden-xs">
       <a class="carousel-control left fa fa-chevron-left btn" href=".carousel-birthday" data-slide="prev"></a>
       <a class="carousel-control right fa fa-chevron-right btn" href=".carousel-birthday" data-slide="next"></a> 
-    </div>
+    </div> -->
     {{/if}}
 
     {{#if contacts.empty}}
@@ -23,7 +23,7 @@
                                     <a href="#campus/employees" data-employee-id="{{nameRecordId}}" class="profilelink"><img src="{{photo}}" alt="" class="img-circle img-thumbnail">                                
                                     </a>
                                  </div>
-                               <div class="label">&nbsp;</div> 
+                               <div class="label label-birthday">{{formatDate birthday year=false}}</div> 
                             </div>
                     {{/each}}
                 </div>
