--- a/js/app/templates/partials/srclist.html
+++ b/js/app/templates/partials/srclist.html
@@ -11,11 +11,7 @@
 		        		{{#if  joined }}
 		        		 <span class="btnJoin"><a href="#" class="btn btn-success  btn-xs btn-cancel" data-index="{{@index}}">Cancel</a></span>
 		        		{{else}}
-		        			{{#if outdated}}
-		        			<span class="btnJoin label label-warning">Out of Date</span>
-		        			{{else}}
-		        			<span class="btnJoin label label-primary">Available</span>
-		        			{{/if}}		        		
+		        		<span class="btnJoin label label-primary">Opening</span>        		
 		        		{{/if}}
 		    	{{/if}}
 	    	{{else}}
