--- a/js/app/templates/partials/traininglist.html
+++ b/js/app/templates/partials/traininglist.html
@@ -7,14 +7,9 @@
       <span class="numjoined-container "><a href="{{joinLink}}" class="numjoined label" target="_blank"><img src="images/loading.gif"/></a></span>
       {{#if available}}
           {{#if ../../noJoinLink}}
-              
-              {{#ifCond ../../../curUserId authorId}}
-                  <span class="btnJoin label label-info"> I am trainer </span>
-              {{else}}
-                  <span class="btnJoin"><a href="#" class="btn btn-success  btn-xs btn-cancel" data-index="{{@index}}">Unregister</a></span>
-              {{/ifCond}}            
+              <span class="btnJoin"><a href="#" class="btn btn-success  btn-xs btn-cancel" data-index="{{@index}}">Unregister</a></span>           
           {{else}}
-              <span class="btnJoin label label-primary">Available</span>
+              <span class="btnJoin label label-primary">Opening</span>
           {{/if}}
       {{else}}
           <span class="btnJoin label label-default">Closed</span>
