--- a/js/app/templates/home/suggestion.html
+++ b/js/app/templates/home/suggestion.html
@@ -3,7 +3,7 @@
         <img src="/_layouts/15/images/icdoc.png" class="icon-doc"/>
     </span>
     <span class="feedback-link">
-        <a target="_blank" href="/campus/Documents/DalianWebSiteUserManual.doc">User Manual</a>
+        <a target="_blank" href="/campus/_layouts/15/WopiFrame.aspx?sourcedoc=%2Fcampus%2FDocuments%2FDalianWebSiteUserManual%2Edoc&action=view">User Manual</a>
     </span>
 </div>
 <div class="item">
